using CustomLib.Models.Users;

namespace CustomLib.Interfaces
{
    public interface UsersInterface : AbstractInterface<UserRead, UserQuery, UserCreate, UserUpdate>
    {

    }
}
